--- a/.github/workflows/Android.yml
+++ b/.github/workflows/Android.yml
@@ -49,6 +49,9 @@ jobs:
           haxelib install newgrounds 1.3.0
           haxelib install hscript
           haxelib install flixel-addons
+          haxelib install firetongue
+          haxelib git tentools https://github.com/TentaRJ/tentools
+          haxelib git systools https://github.com/haya3218/systools
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
           haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools
           haxelib list
