--- a/.github/workflows/Android.yml
+++ b/.github/workflows/Android.yml
@@ -51,7 +51,7 @@ jobs:
           haxelib install flixel-addons
           haxelib install firetongue
           haxelib git tentools https://github.com/TentaRJ/tentools
-          haxelib git hxCodec https://github.com/polybiusproxy/hxCodec 15d950b103603a976e0e2d5004c8717b4eecc945
+          haxelib git hxCodec https://github.com/polybiusproxy/hxCodec
           haxelib git systools https://github.com/haya3218/systools
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
           haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools
